--- a/client/src/style.css
+++ b/client/src/style.css
@@ -18,6 +18,11 @@ p {
     font-size: 18px;
 }
 
+hr {
+    border: none;
+    border-bottom: rgba(0, 0, 0, 0.507) dashed 2px;
+}
+
 :root {
     --layer0: rgb(0, 0, 0);
     --layer1: rgb(29, 7, 10);
@@ -26,9 +31,10 @@ p {
     --text-color: white;
 }
 
-body {
+#root > div{
     min-height: 100vh;
     display: flex;
+    font-family: 'Neucha', cursive;
     flex-direction: column;
     /* align-items: center; */
     background: var(--layer0);
@@ -50,6 +56,7 @@ main {
 
 #entry {
     display: flex;
+    flex: 1;
 }
 
 nav {
@@ -62,15 +69,23 @@ nav {
 }
 
 article {
+    font-family: 'Neucha', cursive;
+    font-weight: bolder;
+    color: black;
+    background: linear-gradient(to right, rgb(211, 184, 149) 0%, rgb(211, 184, 149) 80%, rgb(199, 141, 103) 100%);
     margin-right: 5px;
 }
 
 article, aside {
     /* background: var(--layer1); */
+    color: black;
     flex: 1;
     padding: 5px;
 }
 
+aside {
+    background: linear-gradient(to right, rgb(199, 141, 103) 0%, rgb(211, 184, 149) 20%, rgb(211, 184, 149) 100%);
+}
 
 #cryptid-portrait {
     position: sticky;
@@ -78,11 +93,13 @@ article, aside {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 100vh;
+    
 }
 
 #cryptid {
+    border-radius: 15px;
     max-width: 80%;
+    max-height: 300px;
 }
 
 footer {
