Added post and toggle func to createCryptid Modal and added functioning update route

--- a/client/src/components/CreateModal/style.css
+++ b/client/src/components/CreateModal/style.css
@@ -41,7 +41,14 @@
     display: flex;
 }
 
-.flexrow > * {
+.flexrow > input {
     flex: 1;
 }
 
+#close-modal {
+    align-self: center;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    border: var(--dark-paper) solid 4px;
+}
