--- a/client/src/components/LoginModal/style.css
+++ b/client/src/components/LoginModal/style.css
@@ -13,19 +13,61 @@
 }
 
 #login-modal form {
+    padding: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: var(--super-dark);
 }
 
 #login-modal form input {
     padding: 8px;
     background: var(--light-paper);
     border: none;
-    margin: 5px;
+    margin-bottom: 10px;
 }
 
 #login-modal form input::placeholder {
     color: black;
+}
+
+#login-modal form .flexrow :first-child {
+    border-top-right-radius: 15px;
+}
+
+#login-modal form .flexrow :last-child {
+    border-top-left-radius: 15px;
+}
+
+#login-modal form .flexrow button:not(.close-modal) {
+    padding: 8px 10px;
+    border: none;
+}
+
+#login-close {
+    cursor: pointer;
+    color: black;
+    /* font-weight: bolder; */
+    border-radius: 50%;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    border: var(--light-paper) solid 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    background: var(--dark-paper);
+
+}
+
+#login-close p {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+}
+
+#login-modal form .flexrow {
+    justify-content: space-between;
+    width: 100%;
 }
