--- a/client/src/pages/Account/style.css
+++ b/client/src/pages/Account/style.css
@@ -6,3 +6,10 @@
     color: black;
     padding: 10px;
 }
+
+#logout {
+    background: rgb(230,230,230);
+    padding: 5px;
+    border-radius: 15px;
+    align-self: baseline;
+}
