Added all user cryptids to Account (will need pagination later)

--- a/client/src/pages/Account/style.css
+++ b/client/src/pages/Account/style.css
@@ -13,3 +13,16 @@
     border-radius: 15px;
     align-self: baseline;
 }
+
+#author-cryptids {
+}
+
+#author-cryptids a {
+    padding: 15px;
+    display: block;
+    font-size: 20px;
+}
+
+#author-cryptids :nth-child(2n-1) {
+    background: var(--dark-paper);
+}
