Added extra styling for FAQ page

--- a/client/src/pages/FAQ/style.css
+++ b/client/src/pages/FAQ/style.css
@@ -4,14 +4,18 @@
     color: black;
     display: flex;
     flex-wrap: wrap;
+    padding: 15px;
 }
 
 .question {
     width: 50%;
     padding: 5px;
+    background: var(--super-light);
     /* border-bottom: rgba(230,230,230,.5) dashed 2px; */
     /* margin-bottom: 1em; */
     display: flex;
+    border: var(--light-paper) solid 5px;
+    /* margin: 5px; */
     flex-direction: column;
 }
 
@@ -34,5 +38,7 @@
     .question {
         width: initial;
         margin-bottom: 1em;
+        border: none;
+        background: initial;
     }
 }
